fixed formating, there is no longer white space beteen top of screen and nav bars

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,7 +66,6 @@ h3 {
 
 /* CALENDAR STUFF */
 body {
-    margin: 10px;
     padding: 0;
     font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
     font-size: 14px;
